Update project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,92 +1,27 @@
-# Auto-generated from "Cargo.yml"
-[badges]
-[badges.maintenance]
-status = "actively-developed"
-
-[badges.travis-ci]
-repository = "najamelan/ws_stream_wasm"
-
-[build-dependencies]
-rustc_version = "^0.4"
-
-[dependencies]
-js-sys = "^0.3"
-log = "^0.4"
-send_wrapper = "^0.6"
-thiserror = "^1"
-wasm-bindgen = "^0.2"
-wasm-bindgen-futures = "^0.4"
-
-[dependencies.async_io_stream]
-features = ["map_pharos"]
-version = "^0.3"
-
-[dependencies.futures]
-default-features = false
-version = "^0.3"
-
-[dependencies.pharos]
-version = "^0.5"
-
-[dependencies.web-sys]
-features = ["BinaryType", "Blob", "console", "MessageEvent", "WebSocket", "CloseEvent", "DomException"]
-version = "^0.3"
-
-[dev-dependencies]
-bytes = "^1"
-console_error_panic_hook = "^0.1"
-console_log = "^0.2"
-rand = "^0.8"
-rand_xoshiro = "^0.6"
-serde_cbor = "^0.11"
-wasm-bindgen-test = "^0.3"
-
-[dev-dependencies.async_io_stream]
-features = ["tokio_io"]
-version = "^0.3"
-
-[dev-dependencies.asynchronous-codec]
-version = "^0.6"
-
-[dev-dependencies.getrandom]
-features = ["js"]
-version = "^0.2"
-
-[dev-dependencies.serde]
-features = ["derive"]
-version = "^1"
-
-[dev-dependencies.tokio]
-version = "^1"
-
-[dev-dependencies.tokio-serde-cbor]
-version = "^0.7"
-
-[dev-dependencies.tokio-util]
-default-features = false
-features = ["codec"]
-version = "^0.7"
+[package]
+name = "wasm-ws"
+version = "0.1.0"
+edition = "2021"
+description = "A convenience library for using websockets in WASM"
+authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Naja Melan <najamelan@autistici.org>"]
+homepage = "https://github.com/yukibtc/wasm-ws"
+repository = "https://github.com/yukibtc/wasm-ws.git"
+license = "MIT"
+readme = "README.md"
+categories = ["asynchronous", "network-programming", "api-bindings", "wasm", "web-programming::websocket"]
+keywords = ["wasm", "websocket", "tokio", "stream", "async"]
 
 [features]
+default = []
 tokio_io = ["async_io_stream/tokio_io"]
 
-[package]
-authors = ["Naja Melan <najamelan@autistici.org>"]
-categories = ["asynchronous", "network-programming", "api-bindings", "wasm", "web-programming::websocket"]
-description = "A convenience library for using websockets in WASM"
-documentation = "https://docs.rs/ws_stream_wasm"
-edition = "2018"
-exclude = ["tests", "examples"]
-homepage = "https://github.com/najamelan/ws_stream_wasm"
-keywords = ["wasm", "websocket", "tokio", "stream", "async"]
-license = "Unlicense"
-name = "ws_stream_wasm"
-readme = "README.md"
-repository = "https://github.com/najamelan/ws_stream_wasm"
-version = "0.7.4"
-
-[package.metadata]
-[package.metadata.docs]
-[package.metadata.docs.rs]
-all-features = true
-targets = []
+[dependencies]
+async_io_stream = { version = "0.3", features = ["map_pharos"] }
+futures = { version = "0.3", default-features = false }
+js-sys = "0.3"
+pharos = "0.5"
+send_wrapper = "0.6"
+thiserror = "1"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "DomException", "WebSocket"] }
