--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,10 +2,8 @@ tab_spaces = 4
 newline_style = "Auto"
 reorder_imports = true
 reorder_modules = true
-
-# nightly (to enable when are stable)
-# indent_style = "Block"
-# normalize_comments = true
-# imports_granularity = "Module"
-# reorder_impl_items = true
-# group_imports = "StdExternalCrate"
+indent_style = "Block"
+normalize_comments = true
+imports_granularity = "Module"
+reorder_impl_items = true
+group_imports = "StdExternalCrate"
